@startuml SystemCommands
skinparam classAttributeIconSize 0
hide circle
abstract class Command {
    + {abstract} execute(notes : ArrayList<Note>, tags : List<String>, ui : UI, storage : Storage) : void
    + isExit() : boolean
}
class InitCommand
class ChangeRepoCommand
class CurrentRepoCommand
class ListRepoCommand
class ExitCommand
class HelpCommand

InitCommand -down-|> Command
ChangeRepoCommand -down-|> Command
CurrentRepoCommand -down-|> Command
ListRepoCommand -down-|> Command

ExitCommand -up-|> Command
HelpCommand -up-|> Command
@enduml